app/static/css/homepage.css
* {
    margin: 0;
    box-sizing: border-box;
}

.page_grid {
    display: grid;
    grid-template-columns: 1fr 4fr;
    height: 100%;
}

.sidebar {
    padding: 0.75rem;
    background-color: #f5f5f5;
    overflow-y: auto;
    gap: 0.5rem;
    border-inline-end: 1px solid grey;
}

.sidebar label {
    padding: 30px 0px 0px 0px;
    text-decoration: none;
    font-size: 30px;
    display: block;
}

.sidebar li {
    padding: 5px 8px 6px 0px;
    text-decoration: none;
    font-size: 16px;
    display: block;
}

.sidebar form {
    padding: 10px 0px 0px 0px;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.sidebar form > * {
    flex-grow: 0;
}

.sidebar select.tag-select {
    flex-grow: 1;
}

.sidebar input {
    padding: 2px 5px 2px 5px;
    margin-top: 1rem;
    margin-right: 0.5rem;
}

.sidebar button {
    align-self: center;
    justify-self: center;
}

.offer_grid {
    padding-inline: 2rem;
    padding-block: 2rem;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    column-gap: 2%;
    row-gap: 20px;
    overflow-y: auto;
    align-content: start;
}

.offer_grid .offer {
    display: grid;
    background-color: #cbcbcb;
    border-radius: 5px;
    text-decoration: none;
}

.offer:hover {
    background-color: #8e8e8e;
}

.offer b {
    padding: 0.5rem;
    font-size: 20px;
    color: #000000;
}

.offer p.description {
    padding: 0.5rem;
    color: #000000;
}

.offer img {
    max-width: 100%;
    padding: 0.5rem;
}

.offer p.price {
    padding: 0.5rem;
    text-align: right;
    font-size: 12px;
    font-weight: 500;
    color: #000000;
}

.background{
    display: grid;
    grid-template-rows: auto 1fr;
    height: 100vh;
}

#content {
    overflow-y: auto;
}

